--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -22,6 +22,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  inset: 0; 
   width: 100%;
   height: 100%;
   z-index: -1;
@@ -59,4 +60,30 @@
   z-index: 1;
   text-align: center;
   padding: 50px;
+}
+
+
+/*modo escuro pre-setado para algumas paginas*/
+
+.dark-mode .background{
+   background-color: #1f1f1f;
+}
+
+
+.dark-mode input{
+  background-color: #383434;
+  color: white;
+}
+
+
+.dark-mode input::placeholder{
+  background-color: #383434;
+  color: white;
+}
+
+.dark-mode input:focus {
+  background-color: #383434;
+  color: white;            
+  border: 1px solid #888;  
+  outline: none;           
 }
