--- a/public/css/dashbord.css
+++ b/public/css/dashbord.css
@@ -1,15 +1,18 @@
 body {
   margin: 0;
-  margin-top: 100px;
   background: #f5f7fb;
   color: #1f2937;
   transition: 0.3s;
    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
 }
 
-
 /* CONTEÚDO */
-.container { max-width: 1200px; margin: 2rem auto; padding: 0 1rem; }
+main.container {
+  max-width: 1200px;
+  margin: 2rem auto;
+  padding: 100px 1rem 2rem; /* inclui espaço pro header fixo */
+}
+
 .subtitle { color: #6b7280; margin-bottom: 1.5rem; }
 
 /* CARDS */
@@ -22,7 +25,15 @@ body {
   margin-bottom: 1rem;
   transition: 0.2s;
 }
-.card:hover { transform: translateY(-4px); }
+.card:hover {
+   transform: translateY(-4px);
+  box-shadow: 0 4px 5px #2563eb;
+  }
+
+span{
+  transition: 0.5s;
+  transform: 0.5s;
+}
 
 .grid {
   display: grid;
@@ -59,7 +70,7 @@ body {
 }
 
 /* BOTÕES */
-.btn {
+main.container .btn {
   width: 100%;
   margin-bottom: 0.6rem;
   padding: 0.8rem;
@@ -82,4 +93,38 @@ body {
 /* RESPONSIVO */
 @media (max-width: 768px) {
   .grid { grid-template-columns: 1fr; }
+}
+
+/*animação de zoomIn no Nome do usuario */
+
+@keyframes zoomIn {
+  from {
+    transform: scale(0.5); 
+    opacity: 0;          
+  }
+  to {
+    transform: scale(1);  
+    opacity: 1;       
+  }
+}
+
+.zoom-in {
+  display: inline-block;
+  animation: zoomIn 0.6s ease forwards;
+}
+
+/*   Dark-mode dashboard    */
+
+.dark-mode .background {
+   background-color: #383434;
+}
+
+.dark-mode .subtitle {
+  color: white;
+}
+
+.dark-mode .card {
+  background: #444; /* substitui o gradiente claro */
+  color: #fff;
+  border-left-color: #1b61fc; /* mantém a linha lateral azul */
 }
